Удаление в index.html атрибута onclick

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       
             <label for="rb1" class="notes__label">Notes</label>
             <textarea rows="2" id="rb1" name="textarea" class="form__textarea"></textarea>
-            <button class="form__button" type="submit" id="button" ">Submit</button>
+            <button class="form__button" type="submit" id="button">Submit</button>
         
     </form>
 
