удаление regexp из атрибута pattern в поле First name

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <form action="" class="form">
             
-            <input type="text" class="form__input" placeholder="First name*" required pattern="[^\d]">
+            <input type="text" class="form__input" placeholder="First name*" required pattern="">
             <input type="text" class="form__input" placeholder="Last name*" required>
             <input type="date" class="form__input" placeholder="Birthday*" required>
                      <span class="inlabel">
